Changelist
==========

0.9.3~dev
---------

- Fix tests for python 2.6 (unittest2 required and be installed manually)


0.9.2
-----

 - Tolerant underscore/hyphen usage in package name
 - Tolerant with trailing slash in urls


0.9.1
-----

 - Fix unit tests

0.9
---

 - add key "pyshop.mirror.cache.ttl" in config file.
     This settings allow to set the cache time of a package
     before refresh it on pypi.
 - add a button in the web interface to force the refresh of mirrored package.
     This permit to force reset the ttl of a package on the web interface.

 - add key "pyshop.upload.rewrite_filename" in config file.
     This settings disable the rename of package file uploaded on the server.

 - change "satanize" to "sanitize" keys in config file.
     Modify this settings in your config file after a migration.

 - add key "pyshop.mirror.wheelify" in config file.
     This settings require users to use recent version of pip and setuptools
     virtualenv 1.10.1 is OK. This is experimental.
     User and Proxy Server must run the same OS on the same architecture to
     use that feature.

0.8
---

 - Use requests for xmlrpc queries too.
    - validate certificate if https is used
    - unified proxies configuration (use environment vars)
 - SAWarning/DeprecationWarning removed
 - Fix mirroring link for external files

0.7.6
-----

 - Mirror the download_url of the release file
 - Handle hiphen and underscore [fizyk]
 - Enhance mimetime handling [fizyk]
 - Bugfixes and DeprecationWarning removed

0.7.5
-----

 - Fix package version comparison
 - Handle bdist_wheel format

To handle the wheel format, (some package like Twisted 13 use it),
for previous install, you must run a migration script like this.

::

    $ pyshop_migrate development.ini 0.7.5

The sqlite database file will be altered, YOU MAY backup it before run the
script.

0.7.4
-----

 - Fix local package usage (broken since 0.7.1) [fizyk]

0.7.3
-----
