@@ -5,6 +5,7 @@ Changelist
 ---------
 
 - Fix tests for python 2.6 (unittest2 required and be installed manually)
+- Fix pyramid 1.2 compatibility
 
 
 0.9.2
